--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="bg-gray-50 font-sans text-gray-800">
-
+<!--nav-section-->
   <nav class="flex flex-col md:flex-row items-center justify-between bg-white shadow-sm p-4 sticky top-0 z-10">
     <div class="flex items-center space-x-2">
       <div class="w-8 h-8 rounded-full flex items-center justify-center bg-cover bg-center" style="background-image: url('assets/logo-dark.png');"></div>
@@ -31,18 +31,19 @@
       </div>
     </div>
   </nav>
-
+<!--hero-section-->
   <section class="text-center py-12 bg-[#013223] text-white">
     <img src="assets/logo.png" alt="Ban" class="mx-auto mb-4 w-24 h-24 object-contain">
     <h1 class="text-3xl md:text-4xl font-bold mb-2">Emergency Service Directory</h1>
     <p class="text-lg md:text-xl text-gray-200">Government Emergency Services at Your Fingertip – A Project by Government of the People's Republic of Bangladesh</p>
   </section>
-
+<!--main section-->
   <main class="grid grid-cols-1 md:grid-cols-3 gap-6 p-6 max-w-7xl mx-auto">
 
     <section class="md:col-span-2">
       <h2 class="text-xl font-bold mb-4 text-gray-800">Hotlines</h2>
       <div id="cardSection" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-3 gap-4">
+<!--card section-->
 
         <div class="bg-white shadow-md rounded-lg p-4 flex flex-col justify-between hover:shadow-lg transition-shadow duration-200" data-name="National Emergency Number">
           <div>
@@ -220,6 +221,7 @@
 
       </div>
     </section>
+<!--call history section-->
 
     <section class="bg-white p-4 rounded-lg shadow-md h-fit">
       <div class="flex justify-between items-center mb-4">
